--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "color-contrast-checker": "^2.1.0",
     "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
     "hjson": "^3.2.2",
     "husky": "^9.1.7",
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
     "jest-bench": "^29.7.1",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest-environment-jsdom": "^29.7.0",
     "js-yaml": "^4.1.1",
     "lint-staged": "^16.2.7",
     "lodash.snakecase": "^4.1.1",
